--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,9 +2,9 @@
     "version": 2,
     "builds": [
         {
-            "src": "package.json",
+            "src": "./index.js",
             "use": "@vercel/node"
-        }        
+        }
     ],
     "routes": [
         {
